Remove birth year from Foibe Amundaba's bio

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <section class="bio">
     <h2>About Foibe Amundaba</h2>
     <p>
-      Foibe Amundaba (b. 1981) is an Angolan-born Namibian painter whose work explores themes of identity, tradition, and the evolving roles of women in contemporary African society. She currently teaches afternoon art classes at Gymnasium Private School in Oshana.<br><br>
+      Foibe Amundaba is an Angolan-born Namibian painter whose work explores themes of identity, tradition, and the evolving roles of women in contemporary African society. She currently teaches afternoon art classes at Gymnasium Private School in Oshana.<br><br>
       Amundaba received her formal art education in northern Namibia before continuing her studies at the John Muafangejo Art Centre (JMAC) and the College of the Arts (COTA) in Windhoek, as well as at Spencer Street Studios in Cape Town. Her multidisciplinary training informs a visual language that blends abstraction with symbolic and textural references to African cultural aesthetics.<br><br>
       Her debut solo exhibition, <em>A Line of Stories</em> (2012), held at the Franco-Namibian Cultural Centre in Windhoek, established her as a distinctive voice in Namibian contemporary art. Amundaba’s abstract compositions are inspired by the strength and resilience of African women, incorporating motifs drawn from nature, traditional crafts, and the rhythms of everyday life.<br><br>
       Amundaba has participated in group exhibitions across Namibia, South Africa, Europe, and Japan, and has exhibited with the NJE Collective at the Johannesburg Art Fair and the Cape Town Investec Art Fair.
