--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h2 style="text-align:center; color:#ff7b00; font-size:1.5rem; margin-bottom:1rem;">Gallery</h2>
     <div class="gallery">
       <div class="artwork">
-        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Sample artwork 1"/>
+        <img src="https://images_20250122_234953_678_edit_197320981014777.jpg" alt="Sample artwork 1"/>
         <h3>Resilient Spirits</h3>
         <p>Acrylic on canvas, 2022</p>
       </div>
