Update artwork title in gallery section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="gallery">
       <div class="artwork">
         <img src="https://images_20250122_234953_678_edit_197320981014777.jpg" alt="Sample artwork 1"/>
-        <h3>Resilient Spirits</h3>
+        <h3>smile </h3>
         <p>Acrylic on canvas, 2022</p>
       </div>
       <div class="artwork">
