--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
         <p>Acrylic on canvas, 2022</p>
       </div>
       <div class="artwork">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Sample artwork 2"/>
+        <img src="artwork1 png" alt="Sample artwork 2"/>
         <h3>Identity in Motion</h3>
         <p>Mixed media, 2021</p>
       </div>
       <div class="artwork">
-        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?auto=format&fit=crop&w=600&q=80" alt="Sample artwork 3"/>
+        <img src="artwork2 png" alt="Sample artwork 3"/>
         <h3>Connections</h3>
         <p>Oil on board, 2023</p>
       </div>
       <div class="artwork">
-        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=600&q=80" alt="Sample artwork 4"/>
+        <img src="artwork png" alt="Sample artwork 4"/>
         <h3>Tradition & Change</h3>
         <p>Textural collage, 2022</p>
       </div>
