Update image source for artwork in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p>Oil on board, 2023</p>
       </div>
       <div class="artwork">
-        <img src="artwork png" alt="Sample artwork 4"/>
+        <img src="artwork3 png" alt="Sample artwork 4"/>
         <h3>Tradition & Change</h3>
         <p>Textural collage, 2022</p>
       </div>
