Fix button background gradient syntax

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       text-align: center;
     }
     .contact button {
-      background: linear-gradient(90deg, #ff7b00, #ff007b);
+      background: linear-gradient(90deg, #ff7b00, #ff007b);} 
       color: white;
       border: none;
       padding: 1rem 2.2rem;
